# nordspot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.api  Makefile  README.md  clickhouse-config.xml  conftest.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  ci.yml  daily_pipeline.yml
api/: auth.py  features.py  health.py  loader.py  main.py  model_store.py  predictor.py  schemas.py
api/routers/: forecast.py
config/: thresholds.yaml  zone_config.py  zones.yaml
dashboard/: app.py
db/: clickhouse.py  schema.py
dbt/: .user.yml  dbt_project.yml
dbt/models/silver/: schema.yml  silver_crossborder.sql  silver_generation.sql  silver_load.sql  sources.yml
docs/: SE3_Project_Textbook.aux  SE3_Project_Textbook.out  SE3_Project_Textbook.pyg  SE3_Project_Textbook.tex  SE3_Project_Textbook.toc
docs/_minted/: 01DEDD20848FAC7F882085634E9A0A35.highlight.minted  19A778B9901D42997535C44F7E2A4929.highlight.minted  2E0FDC0A29DEBA670957BA35FD62461F.highlight.minted  32C84B8B6560643231927699455BA005.highlight.minted  36A08B793EA94EA08BEE947046B43F22.highlight.minted  6569FBDFBDC2B6985F23AAD30E35D37D.highlight.minted  67854836B9CA0D69096D5E466407E5E0.highlight.minted  762E3D3815E7B5A972199750D1FA1739.highlight.minted  891FC93EF3788E99A0B78F1D45BBF2D1.highlight.minted  8E712CBFC1A1DC2CFD667C66F9C3432C.highlight.minted  9876B01B623D6BC37BF66F066562F66C.highlight.minted  AD91D321D041A4C5C54680EF5CA5EE36.highlight.minted  BBD6F387765D7A2B1C681C0AAB084306.highlight.minted  CEA6340B7F4A2CE39754B2070959BAE7.highlight.minted  D8B9123DA3A94013407DA9CB373B2EE2.highlight.minted  E41969E829E11470F4B7710EB21047F4.highlight.minted  ED94FC581431AA0DA6DE928BA99B415E.highlight.minted  FA197DA2403C565CE4F7CE23371CB446.highlight.minted  _E4F1118F8D77C6AE27CA38A73CB721BF.index.minted
docs/_minted-SE3_Project_Textbook/: 0FA76C90F5BFD5C23CFD0BAD3D6269D35054B18958CCE8A859E28976AA046BF4.pygtex  3755C48A57EBF33E2E3EF6390B1E53EACE19A8CB359ECBFF6F2CF0365F37185F.pygtex  649AE2911ED6B61861D49733EBE91EB2CE19A8CB359ECBFF6F2CF0365F37185F.pygtex  64A4F5223EE3ED452B22A698875947C1CE19A8CB359ECBFF6F2CF0365F37185F.pygtex  70503AF90F00EE66A96664869599F4ABCE19A8CB359ECBFF6F2CF0365F37185F.pygtex  82ED82C10698BD4F2BCA9AFF1D5F9F82CE19A8CB359ECBFF6F2CF0365F37185F.pygtex  A17C9EB61D78A518CD526957B6396DC7CE19A8CB359ECBFF6F2CF0365F37185F.pygtex  B69137F5F64EE3B3B06EACAFBBC176395054B18958CCE8A859E28976AA046BF4.pygtex  C96E8A3A97AB71A92C12121627459BC9CE19A8CB359ECBFF6F2CF0365F37185F.pygtex  DE609AA88B514F4DCDDEB41ED037028E5054B18958CCE8A859E28976AA046BF4.pygtex
feature_store/: feature_repo.py  feature_retrieval.py  feature_store.yaml
infra/k8s/: 00-namespace.yaml  01-configmap.yaml  02-secrets.yaml  10-clickhouse.yaml  11-redis.yaml  12-mlflow.yaml  20-api.yaml  21-dashboard.yaml  30-ingress.yaml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
ml/: evaluate.py  explain.py  mlflow_setup.py  registry.py  run_eval.py  train.py
ml/models/: __init__.py  catboost.py  ensemble.py  lear.py  lgbm.py  xgboost.py
model/: MODEL_LOG.md  cat_q05.cbm  cat_q50.cbm  cat_q95.cbm
monitoring/: drift_detector.py  metrics.py  threshold_checker.py
pipeline/: features.py  fetch_crossborder.py  fetch_generation.py  fetch_load.py  fetch_prices.py  fetch_weather.py  lake_reader.py  lake_writer.py  store.py
scripts/: check_env.py  migrate_clickhouse.py
sdk/: __init__.py  nordspot_client.py
tests/data_quality/: suite_generation.py  suite_prices.py  suite_weather.py  test_dq_generation.py  test_dq_prices.py  test_dq_weather.py
tests/unit/: test_api_auth.py  test_api_docs.py  test_api_features.py  test_api_forecast.py  test_api_health.py  test_api_loader.py  test_api_predictor.py  test_api_schemas.py  test_catboost.py  test_ensemble.py  test_explain.py  test_feast_definitions.py  test_features.py  test_fetch_crossborder.py  test_fetch_generation.py  test_fetch_load.py  test_fetch_prices.py  test_fetch_weather.py  test_lake_writer.py  test_mlflow_setup.py  test_monitoring_metrics.py  test_registry.py  test_schema.py  test_sdk_client.py  test_threshold_checker.py  test_train_mlflow.py  test_train_zone.py  test_xgboost.py  test_zone_config.py
