[project]
name = "nordspot"
version = "0.1.0"
description = "Production-grade electricity spot price forecasting platform"
requires-python = ">=3.10"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import ordering)
    "N",   # pep8 naming conventions
]
ignore = [
    "E501",  # line too long — ruff formatter handles this
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
filterwarnings = [
    # GE 0.18.x triggers marshmallow's ChangedInMarshmallow4Warning internally.
    # Unfixable from our side — suppress by message pattern.
    "ignore:.*Number.*field should not be instantiated.*",
    # holidays v0.x emits FutureIncompatibilityWarning at import time.
    # Filter by module origin — avoids .match() vs leading-newline regex issues.
    "ignore::Warning:holidays",
]
