[project]
name = "nordspot"
version = "0.1.0"
description = "Production-grade electricity spot price forecasting platform"
requires-python = ">=3.10"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import ordering)
    "N",   # pep8 naming conventions
]
ignore = [
    "E501",  # line too long — ruff formatter handles this
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
filterwarnings = [
    # GE 0.18.x triggers marshmallow's ChangedInMarshmallow4Warning internally.
    # Unfixable from our side — suppress by message pattern.
    "ignore:.*Number.*field should not be instantiated.*",
    # holidays v0.x emits FutureIncompatibilityWarning at import time.
    # Filter by module origin — avoids .match() vs leading-newline regex issues.
    "ignore::Warning:holidays",
    # MLflow 2.x uses Pydantic v1-style decorators deprecated in Pydantic v2.
    # These originate entirely inside mlflow — unfixable from our side.
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:mlflow",
    "ignore::pydantic.warnings.PydanticDeprecatedSince212:mlflow",
    # xarray uses bare np.timedelta64("NaT") which triggers numpy 2.x DeprecationWarning.
    # Triggered at import time by mlflow — unfixable from our side.
    "ignore:.*generic.*unit.*NumPy timedelta.*deprecated.*:DeprecationWarning:xarray",
]
